<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>prover_rclcpp</name>
  <version>0.2.0</version>
  <description>
    rclcpp test sample to reproduce and investigate issues, easy to distribute.
  </description>
  <maintainer email="Tomoya.Fujita@sony.com">Tomoya Fujita</maintainer>
  <license>Apache License 2.0</license>
  <author>Tomoya Fujita</author>
  <author email="Tomoya.Fujita@sony.com">Tomoya Fujita</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rosbag2_cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>prover_interfaces</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>action_tutorials_interfaces</build_depend>
  <build_depend>action_tutorials_cpp</build_depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>rosbag2_cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>prover_interfaces</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>action_tutorials_interfaces</exec_depend>
  <exec_depend>action_tutorials_cpp</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
